# diplomProject

./: .gitignore  README.md
dartLearning/: .gitignore  README.md
dartLearning/flutter_tutorial/: README.md  pubspec.yaml
dartLearning/flutter_tutorial_todo/: README.md  pubspec.yaml
dartLearning/plugins_test/: README.md  pubspec.yaml
dbusService/: README.md
driversLearning/: README.md
flutterAuroraNFC/: README.md
flutterAuroraNFC/flutter_nfc_kit_aurora/src/: CMakeLists.txt  flutter_nfc_kit_aurora.c
flutterAuroraNFC/flutter_nfc_kit_aurora/src/nfcd_handler/include/: nfcd_adapter_handler.h  nfcd_daemon_handler.h
flutterAuroraNFC/flutter_nfc_kit_aurora/src/nfcd_handler/src/: nfcd_adapter_handler.cpp  nfcd_adapter_handler_src.h  nfcd_daemon_handler.cpp  nfcd_daemon_handler_src.h  nfcd_tag_handler.cpp  nfcd_tag_handler_src.h
flutterAuroraNFC/flutter_nfc_kit_aurora/src/nfcd_handler/src/dbus/dbus_ifaces/: nfcd_adapter_dbus_iface.cpp  nfcd_daemon_dbus_iface.cpp
flutterAuroraNFC/flutter_nfc_kit_aurora/src/nfcd_handlers/handlers_headers/: nfcd_tagtype2_handler.h  nfcd_typifier.h
flutterAuroraNFC/flutter_nfc_kit_aurora/src/nfcd_handlers/src/dbus/: nfcd_constants.cpp
flutterAuroraNFC/flutter_nfc_kit_aurora/src/nfcd_handlers/src/dbus/dbus_ifaces/: nfcd_tagtype2_dbus_iface.cpp
flutterAuroraNFC/flutter_nfc_kit_aurora/src/nfcd_handlers/src/dbus/dbus_ifaces/headers/: nfcd_adapter_dbus_iface.h  nfcd_tag_dbus_iface.h  nfcd_tagtype2_dbus_iface.h
flutterAuroraNFC/flutter_nfc_kit_aurora/src/nfcd_handlers/src/headers/: nfcd_tagtype2_handler_src.h
(+143 files in other folders)
